# MLOPS_Car_Accident

./: README.md  data_extract.py  main.py  pyproject.toml  requirements.txt
src/: models.py  predict.py  preprocessing.py  train.py
