[project]
name = "mlops-test"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "xgboost (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mlops_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
